# boundary-smart-splitter

./: .gitignore  LICENSE  README.md  Roadmap.md  flow.md  pyproject.toml  test1.py  test2.py  test3.py
boundary_smart_splitter/: __init__.py  base.py  evaluator.py  heading_detector.py  v1_word.py  v2_sentence.py  v3_paragraph.py  v4_structure.py
boundary_smart_splitter/langchain/: __init__.py  compat.py
examples/: basic_usage.py  benchmark_results.md  competitor_analysis.py  competitor_analysis_results.md  run_benchmarks.py
examples/fixtures/: academic.txt  code.py  news.html  wikipedia.md
tests/: test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase5.py  test_v1.py  test_v2.py  test_v3.py  test_v4.py
